@@ -16,16 +16,15 @@
 
 package io.vertx.starter.service;
 
-import io.reactiverse.childprocess.Process;
-import io.reactiverse.childprocess.ProcessOptions;
-import io.vertx.core.*;
+import io.vertx.core.DeploymentOptions;
+import io.vertx.core.ThreadingModel;
+import io.vertx.core.Vertx;
 import io.vertx.core.buffer.Buffer;
+import io.vertx.core.eventbus.Message;
 import io.vertx.core.impl.Utils;
 import io.vertx.core.json.JsonObject;
-import io.vertx.core.parsetools.RecordParser;
 import io.vertx.junit5.Timeout;
 import io.vertx.junit5.VertxExtension;
-import io.vertx.junit5.VertxTestContext;
 import io.vertx.starter.GeneratorVerticle;
 import io.vertx.starter.Util;
 import io.vertx.starter.VertxProjectCodec;
@@ -37,6 +36,7 @@ import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
 import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
 import org.apache.commons.compress.compressors.gzip.GzipCompressorInputStream;
 import org.apache.commons.io.IOUtils;
+import org.awaitility.Awaitility;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -48,6 +48,7 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
@@ -57,8 +58,6 @@ import static io.vertx.starter.model.BuildTool.GRADLE;
 import static io.vertx.starter.model.BuildTool.MAVEN;
 import static io.vertx.starter.model.JdkVersion.*;
 import static io.vertx.starter.model.Language.KOTLIN;
-import static java.util.concurrent.TimeUnit.SECONDS;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assumptions.assumeThat;
 
@@ -107,9 +106,9 @@ class GeneratorTest {
         .directory(bin)
         .redirectOutput(versionFile.toFile())
         .start();
-      process.waitFor(5, SECONDS);
+      process.waitFor(Duration.ofSeconds(5));
       javaVersion = Integer.parseInt(Files.readAllLines(versionFile)
-        .get(0)
+        .getFirst()
         .split("\\s")[1]
         .split("\\.")[0]);
     } catch (InterruptedException e) {
@@ -122,12 +121,12 @@ class GeneratorTest {
   }
 
   @BeforeEach
-  void beforeEach(Vertx vertx, VertxTestContext testContext) throws Exception {
+  void beforeEach(Vertx vertx) throws Exception {
     workdir = tempDir.resolve(UUID.randomUUID().toString());
     Files.createDirectories(workdir);
     cleanupTasks = new ArrayList<>();
     vertx.eventBus().registerDefaultCodec(VertxProject.class, new VertxProjectCodec());
-    vertx.deployVerticle(new GeneratorVerticle()).onComplete(testContext.succeeding(id -> testContext.completeNow()));
+    vertx.deployVerticle(new GeneratorVerticle(), new DeploymentOptions().setThreadingModel(ThreadingModel.VIRTUAL_THREAD)).await();
   }
 
   @AfterEach
@@ -153,7 +152,7 @@ class GeneratorTest {
       .setArchiveFormat(TGZ);
   }
 
-  static Stream<VertxProject> testProjects() throws IOException {
+  static Stream<VertxProject> testProjects() throws Exception {
     List<String> versions = Util.loadStarterData().getJsonArray("versions").stream()
       .map(JsonObject.class::cast)
       .map(obj -> obj.getString("number"))
@@ -184,97 +183,83 @@ class GeneratorTest {
   @ParameterizedTest
   @MethodSource("testProjectsJdk17")
   @Tag("generator-17")
-  void testProjectJdk17(VertxProject project, Vertx vertx, VertxTestContext testContext) {
+  void testProjectJdk17(VertxProject project, Vertx vertx) throws Exception {
     assumeThat(java17Home).isNotNull();
-    testProject(project, vertx, java17Home, testContext);
+    testProject(project, vertx, java17Home);
   }
 
-  static Stream<VertxProject> testProjectsJdk17() throws IOException {
+  static Stream<VertxProject> testProjectsJdk17() throws Exception {
     return testProjects().map(vertxProject -> vertxProject.setJdkVersion(JDK_17));
   }
 
   @ParameterizedTest
   @MethodSource("testProjectsJdk21")
   @Tag("generator-21")
-  void testProjectJdk21(VertxProject project, Vertx vertx, VertxTestContext testContext) {
+  void testProjectJdk21(VertxProject project, Vertx vertx) throws Exception {
     assumeThat(java21Home).isNotNull();
-    testProject(project, vertx, java21Home, testContext);
+    testProject(project, vertx, java21Home);
   }
 
-  static Stream<VertxProject> testProjectsJdk21() throws IOException {
+  static Stream<VertxProject> testProjectsJdk21() throws Exception {
     return testProjects().map(vertxProject -> vertxProject.setJdkVersion(JDK_21));
   }
 
   @ParameterizedTest
   @MethodSource("testProjectsJdk25")
   @Tag("generator-25")
-  void testProjectJdk25(VertxProject project, Vertx vertx, VertxTestContext testContext) {
+  void testProjectJdk25(VertxProject project, Vertx vertx) throws Exception {
     assumeThat(java25Home).isNotNull();
-    testProject(project, vertx, java25Home, testContext);
+    testProject(project, vertx, java25Home);
   }
 
-  static Stream<VertxProject> testProjectsJdk25() throws IOException {
+  static Stream<VertxProject> testProjectsJdk25() throws Exception {
     return testProjects()
       .filter(vertxProject -> !KOTLIN.equals(vertxProject.getLanguage()))
       .map(vertxProject -> vertxProject.setJdkVersion(JDK_25));
   }
 
-  private void testProject(VertxProject project, Vertx vertx, String javaHome, VertxTestContext testContext) {
-    vertx.eventBus().<Buffer>request(Topics.PROJECT_REQUESTED, project).onComplete(testContext.succeeding(msg -> {
-      unpack(vertx, workdir, msg.body(), testContext.succeeding(unpacked -> {
-        testContext.verify(() -> {
+  private void testProject(VertxProject project, Vertx vertx, String javaHome) throws Exception {
+    Message<Buffer> msg = vertx.eventBus().<Buffer>request(Topics.PROJECT_REQUESTED, project).await();
+    unpack(workdir, msg.body());
+    verifyBaseFiles();
 
-          verifyBaseFiles();
+    BuildTool buildTool = project.getBuildTool();
+    Language language = project.getLanguage();
+    if (buildTool == MAVEN) {
+      verifyMavenFiles();
+    } else if (buildTool == GRADLE) {
+      verifyGradleFiles(language);
+    } else {
+      throw new AssertionError(unsupported(buildTool));
+    }
 
-          BuildTool buildTool = project.getBuildTool();
-          Language language = project.getLanguage();
-          if (buildTool == MAVEN) {
-            verifyMavenFiles();
-          } else if (buildTool == GRADLE) {
-            verifyGradleFiles(language);
-          } else {
-            testContext.failNow(unsupported(buildTool));
-            return;
-          }
+    verifySourceFiles(language);
 
-          try {
-            verifySourceFiles(language);
-          } catch (IOException e) {
-            throw new AssertionError(e);
-          }
+    if (Utils.isWindows()) {
+      return;
+    }
 
-          if (Utils.isWindows()) {
-            testContext.completeNow();
-          } else {
+    buildProject(buildTool, javaHome);
 
-            buildProject(vertx, buildTool, javaHome, testContext.succeeding(projectBuilt -> {
-              testContext.verify(() -> {
+    switch (buildTool) {
+      case MAVEN -> {
+        try {
+          verifyMavenOutputFiles();
+        } catch (IOException e) {
+          throw new AssertionError(e);
+        }
+      }
+      case GRADLE -> {
+        try {
+          verifyGradleOutputFiles();
+        } catch (IOException e) {
+          throw new AssertionError(e);
+        }
+      }
+      default -> throw new AssertionError(unsupported(buildTool));
+    }
 
-                switch (buildTool) {
-                  case MAVEN -> {
-                    try {
-                      verifyMavenOutputFiles();
-                    } catch (IOException e) {
-                      throw new AssertionError(e);
-                    }
-                  }
-                  case GRADLE -> {
-                    try {
-                      verifyGradleOutputFiles();
-                    } catch (IOException e) {
-                      throw new AssertionError(e);
-                    }
-                  }
-                  default -> testContext.failNow(unsupported(buildTool));
-                }
-
-                runDevMode(vertx, buildTool, javaHome, testContext.succeeding(devModeRan -> testContext.completeNow()));
-              });
-            }));
-          }
-        });
-      }));
-    }));
+    runDevMode(buildTool, javaHome);
   }
 
   private void verifyBaseFiles() {
@@ -290,7 +275,7 @@ class GeneratorTest {
     assertThat(workdir.resolve(".mvn/wrapper/maven-wrapper.properties")).isRegularFile();
   }
 
-  private void verifyMavenOutputFiles() throws IOException {
+  private void verifyMavenOutputFiles() throws Exception {
     try (Stream<Path> pathStream = Files.walk(workdir)) {
       Optional<Path> testResult = pathStream.filter(p -> p.toString().endsWith("TestMainVerticle.txt")).findFirst();
       assertThat(testResult).isPresent().hasValueSatisfying(p -> assertThat(p).isRegularFile());
@@ -310,7 +295,7 @@ class GeneratorTest {
     assertThat(workdir.resolve("gradle/wrapper/gradle-wrapper.jar")).isRegularFile();
   }
 
-  private void verifyGradleOutputFiles() throws IOException {
+  private void verifyGradleOutputFiles() throws Exception {
     try (Stream<Path> pathStream = Files.walk(workdir)) {
       Optional<Path> testResult = pathStream.filter(p -> p.toString().endsWith("TestMainVerticle.xml")).findFirst();
       assertThat(testResult).isPresent().hasValueSatisfying(p -> assertThat(p).isRegularFile());
@@ -318,7 +303,7 @@ class GeneratorTest {
     }
   }
 
-  private void verifySourceFiles(Language language) throws IOException {
+  private void verifySourceFiles(Language language) throws Exception {
     try (Stream<Path> pathStream = Files.walk(workdir.resolve("src/main/" + language.getName()))) {
       Optional<Path> verticleFile = pathStream
         .filter(p -> p.endsWith("MainVerticle" + language.getExtension()))
@@ -333,116 +318,134 @@ class GeneratorTest {
     }
   }
 
-  private void buildProject(Vertx vertx, BuildTool buildTool, String javaHome, Handler<AsyncResult<Void>> handler) {
-    ProcessOptions processOptions = new ProcessOptions().setCwd(workdir.toString());
-    processOptions.getEnv().put("JAVA_HOME", javaHome);
+  private void buildProject(BuildTool buildTool, String javaHome) throws Exception {
+    ProcessBuilder builder = new ProcessBuilder().directory(workdir.toFile());
+    builder.environment().put("JAVA_HOME", javaHome);
 
-    String command;
-    List<String> args;
-    if (buildTool == MAVEN) {
-      command = "./mvnw";
-      args = Stream.<String>builder()
-        .add("-Dmaven.repo.local=" + mavenRepository.toAbsolutePath())
-        .add("-s")
-        .add(settingsFile.toAbsolutePath().toString())
-        .add("-B")
-        .add("verify")
-        .build()
-        .collect(toList());
-    } else if (buildTool == GRADLE) {
-      command = "./gradlew";
-      args = Stream.<String>builder()
-        .add("--no-build-cache")
-        .add("--no-daemon")
-        .add("assemble")
-        .add("check")
-        .build()
-        .collect(toList());
-    } else {
-      handler.handle(Future.failedFuture(unsupported(buildTool)));
-      return;
+    List<String> command = buildCommand(buildTool);
+
+    Path output = workdir.resolve("output.log");
+    File outputFile = output.toFile();
+
+    Process process = builder.command(command)
+      .redirectOutput(outputFile)
+      .redirectError(outputFile)
+      .start();
+    cleanupTasks.add(() -> process.destroyForcibly());
+
+    int exitCode = process.waitFor();
+
+    if (exitCode != 0) {
+      throw new AssertionError(String.format("Failed to build project%n%s", Files.readString(output)));
     }
-    Process.create(vertx, command, args, processOptions).startHandler(process -> {
-      cleanupTasks.add(() -> process.kill(true));
-      Buffer buffer = Buffer.buffer();
-      process.stdout().handler(buffer::appendBuffer);
-      process.stderr().handler(buffer::appendBuffer);
-      process.exitHandler(code -> {
-        if (code == 0) {
-          handler.handle(Future.succeededFuture());
-        } else {
-          handler.handle(Future.failedFuture(String.format("Failed to build project%n%s", buffer)));
-        }
-      });
-    }).start();
   }
 
-  private void runDevMode(Vertx vertx, BuildTool buildTool, String javaHome, Handler<AsyncResult<Void>> handler) {
-    ProcessOptions processOptions = new ProcessOptions().setCwd(workdir.toString());
-    processOptions.getEnv().put("JAVA_HOME", javaHome);
-
-    String command;
-    List<String> args;
+  private List<String> buildCommand(BuildTool buildTool) {
+    List<String> command;
     if (buildTool == MAVEN) {
-      command = "./mvnw";
-      args = Arrays.asList("clean", "compile", "exec:java");
+      command = List.of(
+        "./mvnw",
+        "-Dmaven.repo.local=" + mavenRepository.toAbsolutePath(),
+        "-s",
+        settingsFile.toAbsolutePath().toString(),
+        "-B",
+        "verify"
+      );
     } else if (buildTool == GRADLE) {
-      command = "./gradlew";
-      args = Arrays.asList("clean", "run");
+      command = List.of(
+        "./gradlew",
+        "--no-build-cache",
+        "--no-daemon",
+        "assemble",
+        "check"
+      );
     } else {
-      handler.handle(Future.failedFuture(unsupported(buildTool)));
-      return;
+      throw new AssertionError(unsupported(buildTool));
     }
-    Process.create(vertx, command, args, processOptions).startHandler(process -> {
-      cleanupTasks.add(() -> process.kill(true));
-      Promise<Void> promise = Promise.promise();
-      promise.future().onComplete(handler);
-      RecordParser parser = RecordParser.newDelimited("\n")
-        .exceptionHandler(promise::tryFail)
-        .handler(buffer -> {
-          String line = buffer.toString().trim();
-          if (line.contains("HTTP server started on port 8888")) {
-            promise.tryComplete();
-          }
-        });
-      process.stdout().exceptionHandler(promise::tryFail).handler(parser);
-    }).start();
+    return command;
+  }
+
+  private void runDevMode(BuildTool buildTool, String javaHome) throws Exception {
+    ProcessBuilder builder = new ProcessBuilder().directory(workdir.toFile());
+    builder.environment().put("JAVA_HOME", javaHome);
+
+    List<String> command = runCommand(buildTool);
+
+    Path output = workdir.resolve("output.log");
+    File outputFile = output.toFile();
+
+    Process process = builder.command(command)
+      .redirectOutput(outputFile)
+      .redirectError(outputFile)
+      .start();
+    cleanupTasks.add(() -> process.destroyForcibly());
+
+    Awaitility.with()
+      .pollInterval(Duration.ofSeconds(1))
+      .atMost(Duration.ofMinutes(1))
+      .ignoreExceptions()
+      .until(() -> Files.readString(output).contains("HTTP server started on port 8888"));
+
+    process.destroy();
+  }
+
+  private List<String> runCommand(BuildTool buildTool) {
+    List<String> command;
+    if (buildTool == MAVEN) {
+      command = List.of(
+        "./mvnw",
+        "-Dmaven.repo.local=" + mavenRepository.toAbsolutePath(),
+        "-s",
+        settingsFile.toAbsolutePath().toString(),
+        "-B",
+        "clean",
+        "compile",
+        "exec:java"
+      );
+    } else if (buildTool == GRADLE) {
+      command = List.of(
+        "./gradlew",
+        "--no-build-cache",
+        "--no-daemon",
+        "clean",
+        "run"
+      );
+    } else {
+      throw new AssertionError(unsupported(buildTool));
+    }
+    return command;
   }
 
   @SuppressWarnings("OctalInteger")
-  private void unpack(Vertx vertx, Path workdir, Buffer buffer, Handler<AsyncResult<Void>> handler) {
-    vertx.<Void>executeBlocking(() -> {
-      try (ByteArrayInputStream bais = new ByteArrayInputStream(buffer.getBytes());
-           TarArchiveInputStream ais = new TarArchiveInputStream(new GzipCompressorInputStream(bais))) {
+  private void unpack(Path workdir, Buffer buffer) throws Exception {
+    try (ByteArrayInputStream bais = new ByteArrayInputStream(buffer.getBytes());
+         TarArchiveInputStream ais = new TarArchiveInputStream(new GzipCompressorInputStream(bais))) {
 
-        TarArchiveEntry entry;
-        while ((entry = ais.getNextTarEntry()) != null) {
+      TarArchiveEntry entry;
+      while ((entry = ais.getNextEntry()) != null) {
 
-          if (!ais.canReadEntryData(entry)) {
-            throw new IOException("Can't read entry " + entry.getName());
+        if (!ais.canReadEntryData(entry)) {
+          throw new IOException("Can't read entry " + entry.getName());
+        }
+        File f = workdir.resolve(entry.getName()).toFile();
+        if (entry.isDirectory()) {
+          if (!f.isDirectory() && !f.mkdirs()) {
+            throw new IOException("Failed to create directory " + f);
           }
-          File f = workdir.resolve(entry.getName()).toFile();
-          if (entry.isDirectory()) {
-            if (!f.isDirectory() && !f.mkdirs()) {
-              throw new IOException("Failed to create directory " + f);
-            }
-          } else {
-            File parent = f.getParentFile();
-            if (!parent.isDirectory() && !parent.mkdirs()) {
-              throw new IOException("Failed to create directory " + parent);
-            }
-            try (OutputStream outputStream = Files.newOutputStream(f.toPath())) {
-              IOUtils.copy(ais, outputStream);
-              if (entry.getMode() == 0100744) {
-                f.setExecutable(true);
-              }
+        } else {
+          File parent = f.getParentFile();
+          if (!parent.isDirectory() && !parent.mkdirs()) {
+            throw new IOException("Failed to create directory " + parent);
+          }
+          try (OutputStream outputStream = Files.newOutputStream(f.toPath())) {
+            IOUtils.copy(ais, outputStream);
+            if (entry.getMode() == 0100744) {
+              f.setExecutable(true);
             }
           }
         }
-
-        return null;
       }
-    }, false).onComplete(handler);
+    }
   }
 
   private String unsupported(BuildTool buildTool) {
